image added for the header logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <p>Burger Catcher</p>
+      <img class="logo" src="./assets/logo.png" alt="burger catcher" />
     </header>
     <main>
       <canvas id="gameCanvas"></canvas>
