easy ease added to player controls

--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="./assets/logo.png" alt="burger catcher" />
+      <img
+        class="logo"
+        src="./assets/logo.png"
+        alt="Burger Catcher"
+        title="Burger Catcher"
+      />
     </header>
     <main>
       <canvas id="gameCanvas"></canvas>
     </main>
     <footer>
-      <p>Created by Bengabo 2023</p>
+      <p>
+        Created by<a
+          href="https://www.bengabo.com/"
+          target="_blank"
+          title="bengabo.com"
+        >
+          Bengabo
+        </a>
+        &copy;2023
+      </p>
     </footer>
 
     <div id="app"></div>
