minor changes on logo and score feature

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </head>
   <body>
     <header>
-      <!-- <img
+      <img
         class="logo"
         src="./assets/logo.png"
         alt="Burger Catcher"
         title="Burger Catcher"
-      /> -->
+      />
     </header>
     <main>
       <canvas id="gameCanvas"></canvas>
