restart button functional on end screen

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <h1>Game Over</h1>
         <h2>You<span id="gameWinLose"></span></h2>
         <h2>Final score: <span id="gameEndScore"></span></h2>
-        <!-- <button id="gameRestartBtn"><p>Play again</p></button>
-        <p>Refresh the page to play again</p> -->
+        <button id="gameRestartBtn"><p>Play again</p></button>
       </div>
       <canvas id="gameCanvas"></canvas>
     </main>
